--- a/about/about.css
+++ b/about/about.css
@@ -10,8 +10,40 @@ ul {
   list-style: none;
 }
 
+@font-face {
+  font-family: "NationalPension";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2310@1.0/NPSfontRegular.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "SchoolSafeUniverse";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/HakgyoansimWoojuR.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-display: swap;
+}
+
+body {
+  font-family: "SchoolSafeUniverse";
+  background-image: url(characterIMG/star01.png), url(characterIMG/star01.png),
+    url(characterIMG/star01.png);
+  background-repeat: no-repeat;
+  background-position: left 10% bottom 10%, top 10% left 40%,
+    right 10% bottom 30%;
+  background-size: 80px, 60px, 100px;
+  background-attachment: fixed;
+  letter-spacing: 0.5px;
+}
+p {
+  line-height: 1.5;
+}
+h2 {
+  font-family: "NationalPension";
+}
+
 @media (min-width: 1220px) {
-  /**/
   section h2 {
     padding: 0px 50px;
   }
@@ -19,7 +51,7 @@ ul {
     height: 100vh;
     position: relative;
     background-image: linear-gradient(-90deg, #fff, #fff5bc);
-    padding-top: 170px;
+    padding-top: 310px;
   }
   .con01::after {
     width: 100%;
@@ -73,21 +105,21 @@ ul {
     left: 50%;
     transform: translateX(-50%);
     transform-origin: 0% 260px;
-    animation: orbit 5s linear infinite;
+    animation: orbit 13s linear infinite;
   }
   .con01 .move2 {
     left: -10px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: 235px 0px;
-    animation: orbit 6s linear infinite;
+    animation: orbit 14s linear infinite;
   }
   .con01 .move3 {
     right: -10px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: -190px 0px;
-    animation: orbit 7s linear infinite;
+    animation: orbit 15s linear infinite;
   }
 
   /*.con01_작은 궤도*/
@@ -111,26 +143,29 @@ ul {
   .con01 .small {
     width: 16px;
     background-color: #fff147;
-    animation: orbit 3s linear infinite;
+    /* animation: orbit 3s linear infinite; */
   }
   .con01 .move4 {
-    transform-origin: 0% 260px; /* 개체의 회전 중심점 설정 (부모 반지름만큼) */
+    transform-origin: 0% 260px;
     top: -8px;
     left: 50%;
     transform: translateX(-50%);
     transform-origin: 0% 133px;
+    animation: orbit 6s linear infinite;
   }
   .con01 .move5 {
     left: -8px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: 108px 0px;
+    animation: orbit 5s linear infinite;
   }
   .con01 .move6 {
     right: -8px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: -67px 0px;
+    animation: orbit 4s linear infinite;
   }
 
   /*.con01_원 움직임_애니메이션*/
@@ -150,7 +185,12 @@ ul {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: 0.5s;
+    display: block;
     z-index: 11;
+  }
+  .con01 img:hover {
+    transform: translate(-50%, -50%) scale(1.2);
   }
 
   /*.con01_values */
@@ -171,19 +211,20 @@ ul {
   .con01 .values > div {
     position: absolute;
     transition: 0.4s;
+    font-size: 18px;
   }
   .con01 .values > div.sizeUp {
-    font-size: 22px;
+    font-size: 23px;
   }
   .con01 .values > div.active {
-    font-size: 22px;
+    font-size: 23px;
     color: #ffc848;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
   }
   .con01 .values > div:nth-child(1) {
     top: -50px;
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
   }
   .con01 .values > div:nth-child(2) {
     bottom: 30px;
@@ -199,13 +240,13 @@ ul {
     width: 85%;
     height: 100%;
     position: absolute;
-    top: calc(50% - 12px); /*수동계산.. 다른방법?*/
+    top: calc(50% - 12px);
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
     align-content: center;
   }
   .con01 ul h3 {
-    font-size: 40px;
+    font-size: 50px;
     backface-visibility: hidden;
   }
   .con01 ul p {
@@ -217,10 +258,10 @@ ul {
     justify-content: space-between;
   }
   .con01 ul li div:nth-child(2) p {
-    font-size: 18px;
+    font-size: 20px;
   }
   .con01 ul li div:nth-child(2) .second {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
     backface-visibility: hidden;
   }
@@ -238,7 +279,7 @@ ul {
     opacity: 1;
   }
 
-  /* con02 */
+  /*.con02*/
   .con02 {
     height: 100vh;
     display: flex;
@@ -263,7 +304,6 @@ ul {
 
   /*.con02_배경*/
   .con02 .bg {
-    /* width: 1100px; */
     width: 100%;
     height: 700px;
     display: flex;
@@ -276,7 +316,6 @@ ul {
   }
   .con02 .bg li.look {
     display: block;
-    /* opacity: 1; */
   }
   .con02 .bg li:nth-child(1) {
     background: url(img/pic1.jpg) no-repeat center / cover;
@@ -293,8 +332,8 @@ ul {
 
   /*.con02_title*/
   .con02 .title {
-    width: calc(1100px / 3);
-    height: calc(700px / 4 * 3);
+    width: calc(100% / 3);
+    height: 80%;
     position: absolute;
     left: 100px;
     top: 0px;
@@ -310,20 +349,19 @@ ul {
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 0px 0px 30px 30px;
-    padding: 20px;
+    padding: 40px 20px;
     overflow: hidden;
+    box-sizing: border-box;
   }
   .con02 .title li h3 {
-    font-size: 40px;
-  }
-  .con02 .title li p {
-    line-height: 27px;
+    font-size: 35px;
+    font-family: "NationalPension";
   }
   .con02 .title li.look {
     display: flex;
   }
 
-  /* .con02_menu */
+  /*.con02_menu*/
   .con02 .menu {
     position: absolute;
     right: 20px;
@@ -343,12 +381,20 @@ ul {
   .con02 .menu li.look {
     color: #ff8f1c;
   }
-  /* .con02_이미지 */
+  .con02 .menu li p {
+    font-size: 18px;
+
+    /**/
+    align-items: center;
+    align-content: center;
+    display: flex;
+  }
+  /*.con02_이미지*/
   .con02 img {
-    width: 500px;
+    width: 200px;
     position: absolute;
-    top: -100px;
-    right: 100px;
+    top: -145px;
+    right: 10px;
   }
 
   /*.con03*/
@@ -356,8 +402,9 @@ ul {
     height: 700px;
     background-image: url(img/line02.png);
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -372,6 +419,10 @@ ul {
     display: flex;
     text-align: center;
   }
+  .con03 li {
+    width: 400px;
+    flex-shrink: 0;
+  }
   .con03 .images {
     height: 250px;
     position: relative;
@@ -385,20 +436,10 @@ ul {
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 0.3s;
-  }
-  .con03 .images img:nth-child(1) {
-    /* object-fit: none; */
+    -webkit-user-drag: none;
   }
   .con03 li img:nth-child(1) {
     opacity: 0;
-  }
-  .con03 li {
-    width: 400px;
-    flex-shrink: 0;
-  }
-  .con03 li h4 {
-    font-size: 18px;
-    margin: 15px 0px;
   }
   .con03 li:hover img:nth-child(1) {
     z-index: 2;
@@ -406,7 +447,14 @@ ul {
   }
   .con03 li:hover img:nth-child(2) {
     opacity: 0;
-  } /*이 방법 말고...?*/
+  }
+  .con03 li h4 {
+    font-size: 20px;
+    margin: 15px 0px;
+  }
+  .con03 li p {
+    font-size: 18px;
+  }
 
   /*.con04*/
   .con04 {
@@ -552,7 +600,6 @@ ul {
   }
 }
 @media (min-width: 720px) and (max-width: 1220px) {
-  /**/
   section h2 {
     padding: 0px 50px;
   }
@@ -614,21 +661,21 @@ ul {
     left: 50%;
     transform: translateX(-50%);
     transform-origin: 0% 260px;
-    animation: orbit 5s linear infinite;
+    animation: orbit 13s linear infinite;
   }
   .con01 .move2 {
     left: -10px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: 235px 0px;
-    animation: orbit 6s linear infinite;
+    animation: orbit 14s linear infinite;
   }
   .con01 .move3 {
     right: -10px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: -190px 0px;
-    animation: orbit 7s linear infinite;
+    animation: orbit 15s linear infinite;
   }
 
   /*.con01_작은 궤도*/
@@ -652,26 +699,29 @@ ul {
   .con01 .small {
     width: 16px;
     background-color: #fff147;
-    animation: orbit 3s linear infinite;
+    /* animation: orbit 3s linear infinite; */
   }
   .con01 .move4 {
-    transform-origin: 0% 260px; /* 개체의 회전 중심점 설정 (부모 반지름만큼) */
+    transform-origin: 0% 260px;
     top: -8px;
     left: 50%;
     transform: translateX(-50%);
     transform-origin: 0% 133px;
+    animation: orbit 6s linear infinite;
   }
   .con01 .move5 {
     left: -8px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: 108px 0px;
+    animation: orbit 5s linear infinite;
   }
   .con01 .move6 {
     right: -8px;
     top: 50%;
     transform: translateY(-50%);
     transform-origin: -67px 0px;
+    animation: orbit 4s linear infinite;
   }
 
   /*.con01_원 움직임_애니메이션*/
@@ -691,7 +741,12 @@ ul {
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: 0.5s;
+    display: block;
     z-index: 11;
+  }
+  .con01 img:hover {
+    transform: translate(-50%, -50%) scale(1.2);
   }
 
   /*.con01_values */
@@ -724,7 +779,7 @@ ul {
   .con01 .values > div:nth-child(1) {
     top: -50px;
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
   }
   .con01 .values > div:nth-child(2) {
     bottom: 30px;
@@ -742,7 +797,7 @@ ul {
     position: absolute;
     bottom: 60px;
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
     align-content: center;
   }
   .con01 ul h3 {
@@ -781,7 +836,7 @@ ul {
     opacity: 1;
   }
 
-  /* con02 */
+  /*.con02 */
   .con02 {
     height: 100vh;
     display: flex;
@@ -857,12 +912,11 @@ ul {
     overflow: hidden;
   }
   .con02 .title li h3 {
-    font-size: 3.5vw;
+    font-size: clamp(23px, 3vw, 33px);
   }
   .con02 .title li p {
-    line-height: 27px;
-    /* font-size: 1.4vw; */
-    font-size: 12px;
+    line-height: 1.7;
+    font-size: clamp(13px, 1.4vw, 15px);
   }
   .con02 .title li.look {
     display: flex;
@@ -891,10 +945,13 @@ ul {
   }
   /* .con02_이미지 */
   .con02 img {
-    width: 50%;
+    width: 20%;
+    min-width: 150px;
     position: absolute;
-    top: -40px;
-    right: 10%;
+    top: -150px;
+    right: 10px;
+    transform-origin: 100% 0%;
+    transform: translate(0, 0);
   }
 
   /*.con03*/
@@ -902,7 +959,7 @@ ul {
     height: 700px;
     background-image: url(img/line02.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 150%;
     background-position: center;
     display: flex;
     flex-direction: column;
@@ -918,12 +975,15 @@ ul {
     display: flex;
     text-align: center;
   }
+  .con03 li {
+    width: 400px;
+    flex-shrink: 0;
+  }
   .con03 .images {
     height: 250px;
     position: relative;
   }
   .con03 .images img {
-    /* width: 50%; */
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -932,17 +992,10 @@ ul {
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 0.3s;
+    -webkit-user-drag: none;
   }
   .con03 li img:nth-child(1) {
     opacity: 0;
-  }
-  .con03 li {
-    width: 400px;
-    flex-shrink: 0;
-  }
-  .con03 li h4 {
-    font-size: 18px;
-    margin: 15px 0px;
   }
   .con03 li:hover img:nth-child(1) {
     z-index: 2;
@@ -950,7 +1003,11 @@ ul {
   }
   .con03 li:hover img:nth-child(2) {
     opacity: 0;
-  } /*이 방법 말고...?*/
+  }
+  .con03 li h4 {
+    font-size: 18px;
+    margin: 15px 0px;
+  }
 
   /*.con04*/
   .con04 {
@@ -1104,7 +1161,7 @@ ul {
     height: 100vh;
     position: relative;
     background-image: linear-gradient(-90deg, #fff, #fff5bc);
-    /* padding-top: 150px; */
+    padding-top: 150px;
   }
   .con01::after {
     width: 100%;
@@ -1147,45 +1204,42 @@ ul {
     z-index: 7;
   }
 
-  /*.con01_원 움직임용 궤도*/
+  /*.con01_큰 궤도 움직임용*/
   .con01 .wrapper1 {
     width: 100%;
     height: 100%;
-    animation: orbit 5s linear infinite;
+    animation: orbit 8s linear infinite;
   }
   .con01 .wrapper2 {
     width: 100%;
     height: 100%;
-    animation: orbit 4s linear infinite;
+    animation: orbit 7s linear infinite;
   }
   .con01 .wrapper3 {
     width: 100%;
     height: 100%;
-    animation: orbit 3s linear infinite;
+    animation: orbit 6s linear infinite;
   }
+
   /*.con01_큰 궤도_원*/
   .con01 .big {
-    width: 16px;
+    width: 14px;
     background-color: #ff8f1c;
-    /* animation: orbit 7s linear infinite; */
   }
   .con01 .move1 {
     top: -7px;
     left: 50%;
     transform: translateX(-50%);
-    transform-origin: 0% 132px;
   }
   .con01 .move2 {
     left: -7px;
     top: 50%;
     transform: translateY(-50%);
-    transform-origin: 107px 0px;
   }
   .con01 .move3 {
     right: -7px;
     top: 50%;
     transform: translateY(-50%);
-    transform-origin: -68px 0px;
   }
 
   /*.con01_작은 궤도*/
@@ -1216,7 +1270,7 @@ ul {
     display: none;
   }
   .con01 .move4 {
-    transform-origin: 0% 260px; /* 개체의 회전 중심점 설정 (부모 반지름만큼) */
+    transform-origin: 0% 260px;
     top: -8px;
     left: 50%;
     transform: translateX(-50%);
@@ -1239,11 +1293,9 @@ ul {
   @keyframes orbit {
     0% {
       transform: rotate(0deg);
-      /* top: 0px; */
     }
     100% {
       transform: rotate(360deg);
-      /* bottom: 0px; */
     }
   }
 
@@ -1286,27 +1338,26 @@ ul {
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
   }
   .con01 .values > div:nth-child(1) {
-    top: -50px;
+    top: -40px;
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
   }
   .con01 .values > div:nth-child(2) {
-    bottom: 30px;
+    bottom: 20px;
     left: -50px;
   }
   .con01 .values > div:nth-child(3) {
-    bottom: 30px;
-    right: -30px;
+    bottom: 20px;
+    right: -40px;
   }
 
   /*.con01_텍스트*/
   .con01 ul {
     width: 85%;
-    /* height: 200px; */
     position: absolute;
-    bottom: 60px;
+    bottom: 100px;
     left: 50%;
-    transform: translate(-50%, -50%); /*??*/
+    transform: translate(-50%, -50%);
     align-content: center;
   }
   .con01 ul h3 {
@@ -1401,7 +1452,7 @@ ul {
 
   /*.con02_title*/
   .con02 .title {
-    width: calc(100% / 3);
+    width: calc(100% / 2.5);
     height: 65%;
     position: absolute;
     left: 10%;
@@ -1422,11 +1473,17 @@ ul {
     overflow: hidden;
   }
   .con02 .title li h3 {
-    font-size: 3.5vw;
+    font-size: clamp(18px, 3vw, 23px);
   }
   .con02 .title li p {
-    line-height: 20px;
-    font-size: 1.8vw;
+    height: 150px;
+    overflow-y: auto;
+    line-height: 1.7;
+    font-size: 13px;
+    word-break: break-all;
+  }
+  .con02 .title li p::-webkit-scrollbar {
+    display: none;
   }
   .con02 .title li.look {
     display: flex;
@@ -1444,7 +1501,7 @@ ul {
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 30px;
     padding: 10px 40px;
-    font-size: 12px;
+    font-size: 14px;
   }
   .con02 .menu li {
     font-weight: bold;
@@ -1467,7 +1524,7 @@ ul {
     height: 700px;
     background-image: url(img/line02.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 300px;
     background-position: center;
     display: flex;
     flex-direction: column;
@@ -1483,12 +1540,15 @@ ul {
     display: flex;
     text-align: center;
   }
+  .con03 li {
+    width: 300px;
+    flex-shrink: 0;
+  }
   .con03 .images {
-    height: 250px;
+    height: 180px;
     position: relative;
   }
   .con03 .images img {
-    /* width: 45%; */
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -1497,17 +1557,10 @@ ul {
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 0.3s;
+    -webkit-user-drag: none;
   }
   .con03 li img:nth-child(1) {
     opacity: 0;
-  }
-  .con03 li {
-    width: 300px;
-    flex-shrink: 0;
-  }
-  .con03 li h4 {
-    font-size: 16px;
-    margin: 15px 0px;
   }
   .con03 li:hover img:nth-child(1) {
     z-index: 2;
@@ -1515,7 +1568,11 @@ ul {
   }
   .con03 li:hover img:nth-child(2) {
     opacity: 0;
-  } /*이 방법 말고...?*/
+  }
+  .con03 li h4 {
+    font-size: 17px;
+    margin: 15px 0px;
+  }
   .con03 li p {
     font-size: 14px;
   }
