--- a/about/about.css
+++ b/about/about.css
@@ -499,6 +499,7 @@ h2 {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    opacity: 0;
   }
   .topInner {
     background-color: white;
@@ -522,20 +523,43 @@ h2 {
     width: 100px;
     aspect-ratio: 1/1;
     border-radius: 50%;
-    background-color: aqua;
-    background: url(img/p7.jpg) center no-repeat;
-    background-size: cover; /*??*/
+    /* background-color: #ffcd7c; */
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(5px);
     position: relative;
     cursor: pointer;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+  }
+  .floatFix img {
+    width: 80px;
+    /* aspect-ratio: 1/1; */
+    border-radius: 50%;
+    object-fit: contain;
+    animation: circle 10s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  @keyframes circle {
+    100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
   }
   .floatFix p {
-    font-size: 12px;
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+    font-weight: bold;
     position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    background-color: #ff8f1c;
+    align-content: center;
+    text-align: center;
     color: white;
+    opacity: 0;
   }
 
   /*플로팅_문의창*/
@@ -581,11 +605,18 @@ h2 {
     border: 0.5px solid black;
   }
   .inquery li:nth-child(3) {
-    align-items: flex-start; /*흠..*/
+    align-items: flex-start;
+  }
+  .inquery li:nth-child(3) span {
+    margin-top: 5px;
   }
   .inquery li:nth-child(3) input {
     height: 100px;
     border-radius: 20px;
+  }
+  .inquery li:nth-child(3) input::placeholder {
+    position: relative;
+    top: -30px;
   }
 
   .inquery button {
@@ -1018,7 +1049,7 @@ h2 {
   }
   .con04 h3 {
     text-align: center;
-    font-size: 5vw;
+    font-size: clamp(40px, 5vw, 60px);
     overflow: hidden;
   }
   .con04 h3.up {
@@ -1524,7 +1555,7 @@ h2 {
     height: 700px;
     background-image: url(img/line02.png);
     background-repeat: no-repeat;
-    background-size: 300px;
+    background-size: 800px;
     background-position: center;
     display: flex;
     flex-direction: column;
@@ -1586,7 +1617,7 @@ h2 {
   }
   .con04 h3 {
     text-align: center;
-    font-size: 5vw;
+    font-size: clamp(20px, 5vw, 40px);
     overflow: hidden;
   }
   .con04 h3.up {
