--- a/footer/footerStyle.css
+++ b/footer/footerStyle.css
@@ -11,133 +11,459 @@ a {
 }
 body {
   word-break: keep-all;
-  height: 312.5rem;
+  word-break: keep-all;
+  font-family: "SchoolSafeUniverse";
+  line-height: 1.5;
 }
-footer {
-  width: 100%;
-  height: 40vh;
-  color: #fff;
-  text-align: center;
-  font-size: 0.7rem;
-  position: fixed;
-  bottom: 0;
-  overflow: hidden;
-  /* border: 1px solid green; */
-  transform: translateY(90%);
-  transition: 1s;
-}
-footer .inner {
-  background: url(footer_bg.png);
-  width: 100%;
-  padding: 2rem 10vw 0px 10vw;
-  box-sizing: border-box;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 3.125rem;
-  /* border: 1px solid red; */
-  position: relative;
-}
-footer .logo {
-  width: 250px;
-}
-footer .logo img {
-  width: 100%;
-}
-footer:hover {
-  transform: translateY(0%);
-}
-footer .top {
-  width: 80%;
-  margin: 0 auto;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-}
-footer .menu {
-  display: flex;
-  gap: 1.875rem;
-}
-footer .menu h4 {
-  margin-bottom: 0.625rem;
-  font-size: 0.8rem;
-  cursor: pointer;
-  display: flex;
+@font-face {
+  font-family: "SchoolSafeUniverse";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/HakgyoansimWoojuR.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-display: swap;
 }
 
-footer .link {
-  display: flex;
-  gap: 0.625rem;
-  /* border: 1px solid red; */
-}
-footer .link li {
-  width: 2.5rem;
-  height: 2.5rem;
-  font-size: 1.2rem;
-  border-radius: 50%;
-  background-color: #fff;
-  color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-footer .info {
-  font-size: 0.6rem;
-  padding: 0.625rem 0 1.25rem;
-}
-
-footer .flowerImgWrap {
-  position: absolute;
-  animation: spin 10s infinite linear;
-  scale: 0.8;
-  transition: 1s;
-}
-footer .flowerImgWrap:hover {
-  scale: 1;
-}
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
+@media (min-width: 1220px) {
+  /*footer*/
+  footer {
+    width: 100%;
+    height: 40vh;
+    color: #fff;
+    text-align: center;
+    font-size: 0.7rem;
+    position: fixed;
+    bottom: 0;
+    overflow: hidden;
+    /* border: 1px solid green; */
+    transform: translateY(90%);
+    transition: 1s;
+  }
+  footer .inner {
+    background: url(../footer/footer_bg.png);
+    width: 100%;
+    padding: 2rem 10vw 0px 10vw;
+    box-sizing: border-box;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 3.125rem;
+    /* border: 1px solid red; */
+    position: relative;
+  }
+  footer .logo {
+    width: 250px;
+  }
+  footer .logo img {
+    width: 100%;
+  }
+  footer:hover {
+    transform: translateY(0%);
+  }
+  footer .top {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  footer .menu {
+    display: flex;
+    gap: 1.875rem;
+  }
+  footer .menu h4 {
+    margin-bottom: 0.625rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+    display: flex;
+  }
+  footer .menu li:hover {
+    color: #ffb060;
+  }
+  footer .bottom {
+    width: 90%;
+    /* border: 1px solid red; */
+  }
+  footer .link {
+    display: flex;
+    gap: 0.625rem;
+    /* border: 1px solid red; */
+  }
+  footer .link li {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s;
   }
 
-  100% {
-    transform: rotate(360deg);
+  footer .link li:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  footer .info {
+    font-size: 0.6rem;
+    padding: 0.625rem 0 1.25rem;
+  }
+
+  footer .flowerImgWrap {
+    position: absolute;
+    animation: spin 10s infinite linear;
+    scale: 0.8;
+    transition: 1s;
+  }
+  footer .flowerImgWrap:hover {
+    scale: 1;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  footer .flowerImgWrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  footer .flower01 {
+    width: 150px;
+    left: 50px;
+    top: 50%;
+    animation-delay: -1s;
+  }
+  footer .flower02 {
+    width: 100px;
+    right: 10%;
+    top: 45%;
+    animation-delay: -0.8s;
+  }
+  footer .flower03 {
+    width: 100px;
+    right: 40%;
+    bottom: 15%;
+    animation-delay: -1.2s;
+  }
+  footer .flower04 {
+    width: 50px;
+    left: 30%;
+    bottom: 15%;
+    animation-delay: -0.3s;
+  }
+  footer .flower05 {
+    width: 70px;
+    right: 30%;
+    top: 20%;
+  }
+
+  /* 플로팅 버튼 */
+  #floating {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    text-align: center;
+    z-index: 50;
   }
 }
-footer .flowerImgWrap img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
+@media (min-width: 720px) and (max-width: 1220px) {
+  /*footer*/
+  footer {
+    width: 100%;
+    height: 40vh;
+    color: #fff;
+    text-align: center;
+    font-size: 0.7rem;
+    position: fixed;
+    bottom: 0;
+    overflow: hidden;
+    /* border: 1px solid green; */
+    transform: translateY(90%);
+    transition: 1s;
+  }
+  footer .inner {
+    background: url(../footer/footer_bg.png);
+    width: 100%;
+    padding: 2rem 10vw 0px 10vw;
+    box-sizing: border-box;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 3.125rem;
+    /* border: 1px solid red; */
+    position: relative;
+  }
+  footer .logo {
+    width: 250px;
+  }
+  footer .logo img {
+    width: 100%;
+  }
+  footer:hover {
+    transform: translateY(0%);
+  }
+  footer .top {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+  footer .menu {
+    display: flex;
+    gap: 1.875rem;
+  }
+  footer .menu h4 {
+    margin-bottom: 0.625rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+    display: flex;
+  }
+  footer .menu li:hover {
+    color: #ffb060;
+  }
+  footer .bottom {
+    width: 90%;
+    /* border: 1px solid red; */
+  }
+  footer .link {
+    display: flex;
+    gap: 0.625rem;
+    /* border: 1px solid red; */
+  }
+  footer .link li {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s;
+  }
+
+  footer .link li:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  footer .info {
+    font-size: 0.6rem;
+    padding: 0.625rem 0 1.25rem;
+  }
+
+  footer .flowerImgWrap {
+    position: absolute;
+    animation: spin 10s infinite linear;
+    scale: 0.8;
+    transition: 1s;
+  }
+  footer .flowerImgWrap:hover {
+    scale: 1;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  footer .flowerImgWrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  footer .flower01 {
+    width: 150px;
+    left: 50px;
+    top: 50%;
+    animation-delay: -1s;
+    display: none;
+  }
+  footer .flower02 {
+    width: 100px;
+    right: 10%;
+    top: 45%;
+    animation-delay: -0.8s;
+  }
+  footer .flower03 {
+    width: 100px;
+    right: 40%;
+    bottom: 15%;
+    animation-delay: -1.2s;
+  }
+  footer .flower04 {
+    width: 50px;
+    left: 30%;
+    bottom: 15%;
+    animation-delay: -0.3s;
+  }
+  footer .flower05 {
+    width: 70px;
+    right: 30%;
+    top: 20%;
+  }
 }
-footer .flower01 {
-  width: 150px;
-  left: 50px;
-  top: 50%;
-  animation-delay: -1s;
-}
-footer .flower02 {
-  width: 100px;
-  right: 10%;
-  top: 45%;
-  animation-delay: -0.8s;
-}
-footer .flower03 {
-  width: 100px;
-  right: 40%;
-  bottom: 15%;
-  animation-delay: -1.2s;
-}
-footer .flower04 {
-  width: 50px;
-  left: 20%;
-  bottom: 10%;
-  animation-delay: -0.3s;
-}
-footer .flower05 {
-  width: 70px;
-  right: 30%;
-  top: 20%;
+
+@media (max-width: 720px) {
+  /*footer*/
+  footer {
+    width: 100%;
+    height: 40vh;
+    color: #fff;
+    text-align: center;
+    font-size: 0.7rem;
+    position: fixed;
+    bottom: 0;
+    overflow: hidden;
+    /* border: 1px solid green; */
+    transform: translateY(90%);
+    transition: 1s;
+  }
+  footer .inner {
+    background: url(../footer/footer_bg.png);
+    width: 100%;
+    padding: 2rem 10vw 0px 10vw;
+    box-sizing: border-box;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 3.125rem;
+    /* border: 1px solid red; */
+    position: relative;
+  }
+  footer .logo {
+    width: 30vw;
+  }
+  footer .logo img {
+    width: 100%;
+  }
+  footer:hover {
+    transform: translateY(0%);
+  }
+  footer .top {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  footer .menu {
+    display: none;
+  }
+  footer .menu h4 {
+    margin-bottom: 0.625rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+    display: flex;
+  }
+  footer .menu li:hover {
+    color: #ffb060;
+  }
+  footer .bottom {
+    width: 90%;
+    /* border: 1px solid red; */
+  }
+  footer .link {
+    display: flex;
+    justify-content: center;
+    gap: 0.625rem;
+    /* border: 1px solid red; */
+  }
+  footer .link li {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+    border-radius: 50%;
+    background-color: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s;
+  }
+
+  footer .link li:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  footer .info {
+    font-size: 0.6rem;
+    padding: 0.625rem 0 1.25rem;
+  }
+
+  footer .flowerImgWrap {
+    position: absolute;
+    animation: spin 10s infinite linear;
+    scale: 0.8;
+    transition: 1s;
+  }
+  footer .flowerImgWrap:hover {
+    scale: 1;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  footer .flowerImgWrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  footer .flower01 {
+    width: 150px;
+    left: 50px;
+    top: 50%;
+    animation-delay: -1s;
+    display: none;
+  }
+  footer .flower02 {
+    width: 100px;
+    right: 10%;
+    top: 45%;
+    animation-delay: -0.8s;
+  }
+  footer .flower03 {
+    width: 100px;
+    right: 3%;
+    top: 10%;
+    animation-delay: -1.2s;
+  }
+  footer .flower04 {
+    width: 50px;
+    left: 15%;
+    bottom: 25%;
+    animation-delay: -0.3s;
+  }
+  footer .flower05 {
+    width: 70px;
+    right: 30%;
+    top: 20%;
+  }
 }
