--- a/footer/footerStyle.css
+++ b/footer/footerStyle.css
@@ -220,10 +220,10 @@ body {
     margin: 0 auto;
     display: flex;
     align-items: flex-end;
-    justify-content: space-between;
+    justify-content: center;
   }
   footer .menu {
-    display: flex;
+    display: none;
     gap: 1.875rem;
   }
   footer .menu h4 {
@@ -241,6 +241,7 @@ body {
   }
   footer .link {
     display: flex;
+    justify-content: center;
     gap: 0.625rem;
     /* border: 1px solid red; */
   }
@@ -304,8 +305,8 @@ body {
   }
   footer .flower03 {
     width: 100px;
-    right: 40%;
-    bottom: 15%;
+    left: 15%;
+    bottom: 40%;
     animation-delay: -1.2s;
   }
   footer .flower04 {
