--- a/musical/musicalStyle.css
+++ b/musical/musicalStyle.css
@@ -14,6 +14,11 @@ body {
   word-break: keep-all;
   font-family: "SchoolSafeUniverse";
   line-height: 1.5;
+  background: url(../starIMG/star12.png), url(../starIMG/star13.png);
+  background-repeat: no-repeat;
+  background-size: 100px;
+  background-attachment: fixed;
+  background-position: left 10% top 20%, right 15% bottom 30%;
 }
 h2 {
   font-family: "NationalPension";
