--- a/musical/musicalStyle.css
+++ b/musical/musicalStyle.css
@@ -100,6 +100,7 @@ h2 {
     position: absolute;
     animation: float 7s ease-in-out infinite alternate;
     transition: 1s;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   .con01 .imgList li:nth-child(1) {
     width: 20vw;
@@ -254,6 +255,7 @@ h2 {
 
   .con02 li h3 {
     margin: 10px 0px 0px 10px;
+    font-size: 1.2rem;
   }
 
   /*con03*/
@@ -290,6 +292,7 @@ h2 {
     top: 1.875rem;
     transition: 1s;
     scale: 1;
+    border: 1px solid #e8f3b5;
   }
 
   .con03 .card:hover {
@@ -301,6 +304,7 @@ h2 {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
     background-color: rgb(226, 226, 100);
     scale: 1.1;
+    z-index: 5;
   }
   .con03 .card .left,
   .con03 .card .imgWrap {
@@ -386,6 +390,7 @@ h2 {
     position: absolute;
     animation: float 7s ease-in-out infinite alternate;
     transition: 1s;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   .con01 .imgList li:nth-child(1) {
     width: 20vw;
@@ -576,6 +581,7 @@ h2 {
     top: 1.875rem;
     transition: 1s;
     scale: 1;
+    border: 1px solid #e8f3b5;
   }
 
   .con03 .card:hover {
@@ -587,6 +593,7 @@ h2 {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
     background-color: rgb(226, 226, 100);
     scale: 1.1;
+    z-index: 5;
   }
   .con03 .card .left,
   .con03 .card .imgWrap {
@@ -672,25 +679,26 @@ h2 {
     position: absolute;
     animation: float 7s ease-in-out infinite alternate;
     transition: 1s;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   .con01 .imgList li:nth-child(1) {
-    width: 20vw;
-    height: 20vw;
-    top: 18%;
-    left: 23%;
+    width: 20vh;
+    height: 20vh;
+    top: 3%;
+    left: 10%;
   }
   .con01 .imgList li:nth-child(2) {
-    width: 12vw;
-    height: 12vw;
-    top: 50%;
+    width: 14vh;
+    height: 14vh;
+    bottom: 18%;
     left: 10%;
     animation-delay: -3s;
   }
   .con01 .imgList li:nth-child(3) {
-    width: 14vw;
-    height: 14vw;
-    top: 65%;
-    left: 25%;
+    width: 12vh;
+    height: 12vh;
+    top: 20%;
+    right: 5%;
     animation-delay: -5s;
   }
   .con01 .imgList li:hover {
@@ -702,10 +710,10 @@ h2 {
     object-fit: cover;
   }
   .con01 .characterWrap {
-    width: 20vw;
+    width: 15vh;
     position: absolute;
     bottom: 20px;
-    right: 10vw;
+    right: 10px;
     /* border: 1px solid red; */
   }
   .con01 .characterWrap img {
@@ -746,7 +754,9 @@ h2 {
     align-items: flex-end;
     gap: 10px;
   }
-
+  .con02 .title .txt p {
+    display: none;
+  }
   .con02 .title .category li {
     cursor: pointer;
   }
@@ -755,7 +765,7 @@ h2 {
   }
   .simply-scroll-clip {
     width: 100vw;
-    height: 30rem;
+    height: 300px;
     overflow: hidden;
     border-radius: 0.625rem;
   }
@@ -772,15 +782,15 @@ h2 {
   }
   .con02 .list li {
     /* border: 1px solid red; */
-    width: 300px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
     cursor: pointer;
     flex-shrink: 0;
     transition: 1s;
   }
-  .con02 .list li.on {
-    width: 500px;
-  }
+  /* .con02 .list li.on {
+    height: 400px;
+  } */
   .con02 li .imgWrap {
     width: 100%;
     height: 100%;
@@ -817,12 +827,12 @@ h2 {
     transition: 1s;
   }
 
-  .con02 li .imgWrap:hover img {
+  /* .con02 li .imgWrap:hover img {
     filter: brightness(0.35);
   }
   .con02 li .imgWrap:hover p {
     opacity: 1;
-  }
+  } */
 
   .con02 li h3 {
     margin: 10px 0px 0px 10px;
@@ -862,6 +872,7 @@ h2 {
     top: 1.875rem;
     transition: 1s;
     scale: 1;
+    border: 1px solid #e8f3b5;
   }
 
   .con03 .card:hover {
@@ -873,6 +884,7 @@ h2 {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
     background-color: rgb(226, 226, 100);
     scale: 1.1;
+    z-index: 5;
   }
   .con03 .card .left,
   .con03 .card .imgWrap {
