--- a/sub_visual/sub_visualStyle.css
+++ b/sub_visual/sub_visualStyle.css
@@ -125,7 +125,7 @@ h2 {
   #visual .keyword {
     /* border: 1px solid red; */
     position: absolute;
-    font-size: 5rem;
+    font-size: 10vw;
   }
   #visual .keyword01 {
     left: 45%;
@@ -151,7 +151,7 @@ h2 {
     overflow: hidden;
     color: #fff;
     white-space: nowrap;
-    font-size: 5rem;
+    font-size: 5vw;
   }
 
   #visual ul {
@@ -206,7 +206,8 @@ h2 {
     width: 0;
     overflow: hidden;
     color: #fff;
-    font-size: 15vw;
+    font-size: 5vw;
+    white-space: nowrap;
   }
 
   #visual ul {
